[package]
name = "gilt"
version = "0.3.4"
edition = "2024"
description = "A binary for calculating the current best return from a UK Gilt."
license = "MIT"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1"
backon = "1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["cargo", "derive"] }
comfy-table = "7"
indoc = "2"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "default-tls", "json", "charset", "http2"] }
rust_decimal = { version = "1", features = ["maths", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ua_generator = "0.5"
